--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -1,4 +1,6 @@
-name: Update Dependencies
+%YAML 1.2
+---
+name: Dependencies Check
 on:
   schedule:
     - cron: "0 0 * * 0" # Run weekly on Sunday
