--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
+%YAML 1.2
+---
 name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
   contents: read
@@ -22,58 +24,58 @@ jobs:
         service: [mcp, mcp-tools]
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-    - name: Check if service exists
-      id: check-service
-      run: |
-        if [ -d "${{ matrix.service }}" ]; then
-          echo "exists=true" >> $GITHUB_OUTPUT
-        else
-          echo "exists=false" >> $GITHUB_OUTPUT
-          echo "Service directory ${{ matrix.service }} does not exist, skipping..."
-        fi
+      - name: Check if service exists
+        id: check-service
+        run: |
+          if [ -d "${{ matrix.service }}" ]; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+            echo "Service directory ${{ matrix.service }} does not exist, skipping..."
+          fi
 
-    - name: Create virtual environment
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        uv venv
-        source .venv/bin/activate
-        if [ -f requirements.txt ]; then
-          uv pip install -r requirements.txt
-        else
-          echo "No requirements.txt found, installing basic test dependencies"
-          uv pip install pytest pytest-cov
-        fi
+      - name: Create virtual environment
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          uv venv
+          source .venv/bin/activate
+          if [ -f requirements.txt ]; then
+            uv pip install -r requirements.txt
+          else
+            echo "No requirements.txt found, installing basic test dependencies"
+            uv pip install pytest pytest-cov
+          fi
 
-    - name: Run tests
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        source .venv/bin/activate
-        if [ -d tests ]; then
-          pytest tests/ --cov=src --cov-report=xml -v || true
-        else
-          echo "No tests directory found in ${{ matrix.service }}"
-        fi
+      - name: Run tests
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          source .venv/bin/activate
+          if [ -d tests ]; then
+            pytest tests/ --cov=src --cov-report=xml -v || true
+          else
+            echo "No tests directory found in ${{ matrix.service }}"
+          fi
 
-    - name: Upload coverage to Codecov
-      if: steps.check-service.outputs.exists == 'true'
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./${{ matrix.service }}/coverage.xml
-        fail_ci_if_error: false
+      - name: Upload coverage to Codecov
+        if: steps.check-service.outputs.exists == 'true'
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./${{ matrix.service }}/coverage.xml
+          fail_ci_if_error: false
 
   lint:
     name: Lint
@@ -84,58 +86,58 @@ jobs:
         service: [mcp, mcp-tools]
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-    - name: Check if service exists
-      id: check-service
-      run: |
-        if [ -d "${{ matrix.service }}" ]; then
-          echo "exists=true" >> $GITHUB_OUTPUT
-        else
-          echo "exists=false" >> $GITHUB_OUTPUT
-          echo "Service directory ${{ matrix.service }} does not exist, skipping..."
-        fi
+      - name: Check if service exists
+        id: check-service
+        run: |
+          if [ -d "${{ matrix.service }}" ]; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+            echo "Service directory ${{ matrix.service }} does not exist, skipping..."
+          fi
 
-    - name: Create virtual environment
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        uv venv
-        source .venv/bin/activate
-        if [ -f requirements.txt ]; then
-          uv pip install -r requirements.txt
-        else
-          uv pip install ruff mypy
-        fi
+      - name: Create virtual environment
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          uv venv
+          source .venv/bin/activate
+          if [ -f requirements.txt ]; then
+            uv pip install -r requirements.txt
+          else
+            uv pip install ruff mypy
+          fi
 
-    - name: Run ruff
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        source .venv/bin/activate
-        ruff check . --fix || true
-        ruff format . || true
+      - name: Run ruff
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          source .venv/bin/activate
+          ruff check . --fix || true
+          ruff format . || true
 
-    - name: Run mypy
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        source .venv/bin/activate
-        if [ -d src ]; then
-          mypy src --ignore-missing-imports || true
-        else
-          echo "No src directory found in ${{ matrix.service }}"
-        fi
+      - name: Run mypy
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          source .venv/bin/activate
+          if [ -d src ]; then
+            mypy src --ignore-missing-imports || true
+          else
+            echo "No src directory found in ${{ matrix.service }}"
+          fi
 
   build-docs:
     name: Build Documentation
@@ -144,67 +146,67 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-    - name: Build combined documentation
-      run: |
-        mkdir -p combined-docs
-        echo "# IGN Scripts Documentation" > combined-docs/index.md
-        echo "" >> combined-docs/index.md
-        echo "## Services" >> combined-docs/index.md
-        echo "" >> combined-docs/index.md
-        
-        # Check and build MCP docs
-        if [ -d "mcp" ] && [ -f "mcp/mkdocs.yml" ]; then
-          echo "- [MCP Service](./mcp/)" >> combined-docs/index.md
-          cd mcp
-          uv venv
-          source .venv/bin/activate
-          if [ -f requirements.txt ]; then
-            uv pip install -r requirements.txt
+      - name: Build combined documentation
+        run: |
+          mkdir -p combined-docs
+          echo "# IGN Scripts Documentation" > combined-docs/index.md
+          echo "" >> combined-docs/index.md
+          echo "## Services" >> combined-docs/index.md
+          echo "" >> combined-docs/index.md
+
+          # Check and build MCP docs
+          if [ -d "mcp" ] && [ -f "mcp/mkdocs.yml" ]; then
+            echo "- [MCP Service](./mcp/)" >> combined-docs/index.md
+            cd mcp
+            uv venv
+            source .venv/bin/activate
+            if [ -f requirements.txt ]; then
+              uv pip install -r requirements.txt
+            fi
+            uv pip install mkdocs mkdocs-material
+            mkdocs build
+            cp -r site ../combined-docs/mcp
+            cd ..
           fi
-          uv pip install mkdocs mkdocs-material
-          mkdocs build
-          cp -r site ../combined-docs/mcp
-          cd ..
-        fi
-        
-        # Check and build MCP Tools docs
-        if [ -d "mcp-tools" ] && [ -f "mcp-tools/mkdocs.yml" ]; then
-          echo "- [MCP Tools Service](./mcp-tools/)" >> combined-docs/index.md
-          cd mcp-tools
-          uv venv
-          source .venv/bin/activate
-          if [ -f requirements.txt ]; then
-            uv pip install -r requirements.txt
+
+          # Check and build MCP Tools docs
+          if [ -d "mcp-tools" ] && [ -f "mcp-tools/mkdocs.yml" ]; then
+            echo "- [MCP Tools Service](./mcp-tools/)" >> combined-docs/index.md
+            cd mcp-tools
+            uv venv
+            source .venv/bin/activate
+            if [ -f requirements.txt ]; then
+              uv pip install -r requirements.txt
+            fi
+            uv pip install mkdocs mkdocs-material
+            mkdocs build
+            cp -r site ../combined-docs/mcp-tools
+            cd ..
           fi
-          uv pip install mkdocs mkdocs-material
-          mkdocs build
-          cp -r site ../combined-docs/mcp-tools
-          cd ..
-        fi
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
-    - name: Upload to GitHub Pages
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: ./combined-docs
+      - name: Upload to GitHub Pages
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./combined-docs
 
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
   build-docker:
     name: Build and Push Docker Images
@@ -213,44 +215,44 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and push MCP
-      if: hashFiles('./mcp/Dockerfile') != ''
-      uses: docker/build-push-action@v5
-      with:
-        context: ./mcp
-        push: true
-        tags: |
-          ghcr.io/${{ github.repository_owner }}/ignition_tools-mcp:latest
-          ghcr.io/${{ github.repository_owner }}/ignition_tools-mcp:${{ github.sha }}
-        labels: |
-          org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
-          org.opencontainers.image.revision=${{ github.sha }}
-          org.opencontainers.image.title=IGN Scripts MCP Service
-          org.opencontainers.image.description=Machine Control Program service for IGN Scripts
+      - name: Build and push MCP
+        if: hashFiles('./mcp/Dockerfile') != ''
+        uses: docker/build-push-action@v5
+        with:
+          context: ./mcp
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/ignition_tools-mcp:latest
+            ghcr.io/${{ github.repository_owner }}/ignition_tools-mcp:${{ github.sha }}
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.title=IGN Scripts MCP Service
+            org.opencontainers.image.description=Machine Control Program service for IGN Scripts
 
-    - name: Build and push MCP Tools
-      if: hashFiles('./mcp-tools/Dockerfile') != ''
-      uses: docker/build-push-action@v5
-      with:
-        context: ./mcp-tools
-        push: true
-        tags: |
-          ghcr.io/${{ github.repository_owner }}/ignition_tools-mcp-tools:latest
-          ghcr.io/${{ github.repository_owner }}/ignition_tools-mcp-tools:${{ github.sha }}
-        labels: |
-          org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
-          org.opencontainers.image.revision=${{ github.sha }}
-          org.opencontainers.image.title=IGN Scripts MCP Tools
-          org.opencontainers.image.description=Development and testing toolkit for IGN Scripts MCP service 
+      - name: Build and push MCP Tools
+        if: hashFiles('./mcp-tools/Dockerfile') != ''
+        uses: docker/build-push-action@v5
+        with:
+          context: ./mcp-tools
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/ignition_tools-mcp-tools:latest
+            ghcr.io/${{ github.repository_owner }}/ignition_tools-mcp-tools:${{ github.sha }}
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.title=IGN Scripts MCP Tools
+            org.opencontainers.image.description=Development and testing toolkit for IGN Scripts MCP service
