--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,12 +1,14 @@
+%YAML 1.2
+---
 name: Security Scan
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   schedule:
-    - cron: '0 0 * * 0'  # Run weekly on Sunday
+    - cron: "0 0 * * 0" # Run weekly on Sunday
 
 permissions:
   contents: read
@@ -22,98 +24,98 @@ jobs:
         service: [mcp, mcp-tools]
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-    - name: Check if service exists
-      id: check-service
-      run: |
-        if [ -d "${{ matrix.service }}" ]; then
-          echo "exists=true" >> $GITHUB_OUTPUT
-        else
-          echo "exists=false" >> $GITHUB_OUTPUT
-          echo "Service directory ${{ matrix.service }} does not exist, skipping..."
-        fi
+      - name: Check if service exists
+        id: check-service
+        run: |
+          if [ -d "${{ matrix.service }}" ]; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+            echo "Service directory ${{ matrix.service }} does not exist, skipping..."
+          fi
 
-    - name: Create virtual environment
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        uv venv
-        source .venv/bin/activate
-        if [ -f requirements.txt ]; then
-          uv pip install -r requirements.txt
-        fi
-        uv pip install bandit safety pip-audit
+      - name: Create virtual environment
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          uv venv
+          source .venv/bin/activate
+          if [ -f requirements.txt ]; then
+            uv pip install -r requirements.txt
+          fi
+          uv pip install bandit safety pip-audit
 
-    - name: Run Bandit
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        source .venv/bin/activate
-        if [ -d src ]; then
-          bandit -r src -f json -o bandit-results.json || true
-        else
-          echo "No src directory found, creating empty bandit report"
-          echo '{"results": [], "metrics": {}}' > bandit-results.json
-        fi
+      - name: Run Bandit
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          source .venv/bin/activate
+          if [ -d src ]; then
+            bandit -r src -f json -o bandit-results.json || true
+          else
+            echo "No src directory found, creating empty bandit report"
+            echo '{"results": [], "metrics": {}}' > bandit-results.json
+          fi
 
-    - name: Run Safety
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        source .venv/bin/activate
-        if [ -f requirements.txt ]; then
-          safety check -r requirements.txt --json > safety-results.json || true
-        else
-          safety check --json > safety-results.json || true
-        fi
+      - name: Run Safety
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          source .venv/bin/activate
+          if [ -f requirements.txt ]; then
+            safety check -r requirements.txt --json > safety-results.json || true
+          else
+            safety check --json > safety-results.json || true
+          fi
 
-    - name: Run pip-audit
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        source .venv/bin/activate
-        if [ -f requirements.txt ]; then
-          pip-audit -r requirements.txt --format=json --output=pip-audit-results.json || true
-        else
-          pip-audit --format=json --output=pip-audit-results.json || true
-        fi
+      - name: Run pip-audit
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          source .venv/bin/activate
+          if [ -f requirements.txt ]; then
+            pip-audit -r requirements.txt --format=json --output=pip-audit-results.json || true
+          else
+            pip-audit --format=json --output=pip-audit-results.json || true
+          fi
 
-    - name: Upload Bandit results
-      if: always() && steps.check-service.outputs.exists == 'true'
-      uses: actions/upload-artifact@v4
-      with:
-        name: bandit-results-${{ matrix.service }}
-        path: ./${{ matrix.service }}/bandit-results.json
+      - name: Upload Bandit results
+        if: always() && steps.check-service.outputs.exists == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: bandit-results-${{ matrix.service }}
+          path: ./${{ matrix.service }}/bandit-results.json
 
-    - name: Upload Safety results
-      if: always() && steps.check-service.outputs.exists == 'true'
-      uses: actions/upload-artifact@v4
-      with:
-        name: safety-results-${{ matrix.service }}
-        path: ./${{ matrix.service }}/safety-results.json
+      - name: Upload Safety results
+        if: always() && steps.check-service.outputs.exists == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: safety-results-${{ matrix.service }}
+          path: ./${{ matrix.service }}/safety-results.json
 
-    - name: Upload pip-audit results
-      if: always() && steps.check-service.outputs.exists == 'true'
-      uses: actions/upload-artifact@v4
-      with:
-        name: pip-audit-results-${{ matrix.service }}
-        path: ./${{ matrix.service }}/pip-audit-results.json
+      - name: Upload pip-audit results
+        if: always() && steps.check-service.outputs.exists == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: pip-audit-results-${{ matrix.service }}
+          path: ./${{ matrix.service }}/pip-audit-results.json
 
-    - name: Check for critical vulnerabilities
-      if: steps.check-service.outputs.exists == 'true'
-      run: |
-        cd ${{ matrix.service }}
-        echo "Security scan completed for ${{ matrix.service }}."
-        echo "Review the uploaded artifacts for detailed security reports."
-        # Note: We're not failing the build on vulnerabilities to allow for manual review 
+      - name: Check for critical vulnerabilities
+        if: steps.check-service.outputs.exists == 'true'
+        run: |
+          cd ${{ matrix.service }}
+          echo "Security scan completed for ${{ matrix.service }}."
+          echo "Review the uploaded artifacts for detailed security reports."
+          # Note: We're not failing the build on vulnerabilities to allow for manual review
