--- a/.github/workflows/verify-tokens.yml
+++ b/.github/workflows/verify-tokens.yml
@@ -1,64 +1,66 @@
-name: Verify Token Access
+%YAML 1.2
+---
+name: Verify Tokens
 
 on:
-  workflow_dispatch:  # Allow manual triggering
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   verify-security-tools:
     name: Verify Security Tools
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-    - name: Create virtual environment
-      run: |
-        uv venv
-        source .venv/bin/activate
-        uv pip install bandit safety pip-audit
-        if [ -f requirements.txt ]; then
-          uv pip install -r requirements.txt
-        fi
+      - name: Create virtual environment
+        run: |
+          uv venv
+          source .venv/bin/activate
+          uv pip install bandit safety pip-audit
+          if [ -f requirements.txt ]; then
+            uv pip install -r requirements.txt
+          fi
 
-    - name: Test security tools
-      run: |
-        source .venv/bin/activate
-        echo "Testing Bandit..."
-        bandit --version
-        echo "Testing Safety..."
-        safety --version
-        echo "Testing pip-audit..."
-        pip-audit --version
-        echo "All security tools are working correctly!"
+      - name: Test security tools
+        run: |
+          source .venv/bin/activate
+          echo "Testing Bandit..."
+          bandit --version
+          echo "Testing Safety..."
+          safety --version
+          echo "Testing pip-audit..."
+          pip-audit --version
+          echo "All security tools are working correctly!"
 
   verify-docker:
     name: Verify Docker Token
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Verify Docker access
-      run: |
-        echo "Testing GitHub Container Registry access..."
-        docker pull ghcr.io/reh3376/mcp:latest || echo "MCP image not found or access denied"
-        docker pull ghcr.io/reh3376/mcp-tools:latest || echo "MCP Tools image not found or access denied"
-        echo "Docker verification completed" 
+      - name: Verify Docker access
+        run: |
+          echo "Testing GitHub Container Registry access..."
+          docker pull ghcr.io/reh3376/mcp:latest || echo "MCP image not found or access denied"
+          docker pull ghcr.io/reh3376/mcp-tools:latest || echo "MCP Tools image not found or access denied"
+          echo "Docker verification completed"
