--- a/mcp-tools/.github/workflows/docker-publish.yml
+++ b/mcp-tools/.github/workflows/docker-publish.yml
@@ -1,10 +1,12 @@
+%YAML 1.2
+---
 name: Docker Build and Publish
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 env:
   REGISTRY: ghcr.io
@@ -48,4 +50,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
-          cache-to: type=gha,mode=max 
+          cache-to: type=gha,mode=max
