--- a/mcp-tools/mkdocs.yml
+++ b/mcp-tools/mkdocs.yml
@@ -1,3 +1,5 @@
+%YAML 1.2
+---
 site_name: MCP Tools Documentation
 site_description: Documentation for the MCP Tools development and testing toolkit
 site_author: IGN Scripts Team
@@ -16,17 +18,17 @@ theme:
 nav:
   - Home: index.md
   - Getting Started:
-    - Installation: getting-started/installation.md
-    - Configuration: getting-started/configuration.md
-    - Quick Start: getting-started/quickstart.md
+      - Installation: getting-started/installation.md
+      - Configuration: getting-started/configuration.md
+      - Quick Start: getting-started/quickstart.md
   - Tools:
-    - API Testing: tools/api-testing.md
-    - Performance Monitoring: tools/performance.md
-    - Debugging: tools/debugging.md
+      - API Testing: tools/api-testing.md
+      - Performance Monitoring: tools/performance.md
+      - Debugging: tools/debugging.md
   - Development:
-    - Contributing: development/contributing.md
-    - Testing: development/testing.md
-    - Docker: development/docker.md
+      - Contributing: development/contributing.md
+      - Testing: development/testing.md
+      - Docker: development/docker.md
 
 markdown_extensions:
   - pymdownx.highlight
@@ -36,4 +38,4 @@ markdown_extensions:
   - admonition
   - footnotes
   - toc:
-      permalink: true 
+      permalink: true
